[package]
name = "proc_macro_workshop"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my_macro = { path = "my_macro" }
#hello_macro_derive = { path = "../hello_macro/hello_macro_derive" }
